[package]
name = "tweakria2"
description = "A tool that use for tweak aria2."
version = "0.1.0"
edition = "2021"
authors = ["vcup"]
repository = "https://github.com/vcup/tweakria2"
keywords = ["aria2", "rust", "tweak", "tool", "cli"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true

[dependencies]
anyhow = "1.0.81"
dirs = "5.0.1"
git2 = "0.18.3"
nom = "7.1.3"
tempfile = "3.10.1"
thiserror = "1.0.58"
